--- a/public/index.css
+++ b/public/index.css
@@ -180,10 +180,28 @@ th {
 body {
   background-color: #333;
   color: #ff9;
-  margin: 0 1em; }
+  text-align: center; }
 
 a:link, a:visited {
   color: #ccc; }
 
 a:hover, a:active {
   color: #fff; }
+
+header {
+  background-color: #ff9;
+  color: #333; }
+  header h1 {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    line-height: 4em;
+    font-size: 6em; }
+
+section {
+  margin: 4em 0; }
+  section h2 {
+    font-family: 'Montserrat', sans-serif; }
+
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 4em; } }
