--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,18 @@
 @import "lib/normalize";
 
-$color-dark: #333;
-$color-key:  #ff9;
+$color-light: #fff;
+$color-dark:  #333;
+$color-key:   #ff9;
 
 body {
   background-color: $color-dark;
-  color: $color-key;
+  color: $color-light;
   text-align: center;
 }
 
 a {
-  &:link, &:visited { color: #ccc; }
-  &:hover, &:active { color: #fff; }
+  &:link, &:visited { color: darken($color-light, 20%); }
+  &:hover, &:active { color: $color-light; }
 }
 
 header {
@@ -33,6 +34,7 @@ section {
 
   h2 {
     font-family: 'Montserrat', sans-serif;
+    color: $color-key;
   }
 }
 
