--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,14 +16,24 @@ a {
 }
 
 header {
+  position: relative;
   background-color: $color-key;
   color: $color-dark;
 
   h1 {
+    position: relative;
+    z-index: 2;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     line-height: 4em;
     font-size: 6em;
+  }
+
+  canvas#voronoi {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
   }
 }
 
