--- a/public/index.css
+++ b/public/index.css
@@ -214,7 +214,42 @@ section {
     font-family: 'Montserrat', sans-serif;
     color: #ff9; }
 
+#slack form {
+  display: table;
+  font-size: 1.5em;
+  color: #333;
+  height: 2.5em;
+  width: 100%;
+  max-width: 20em;
+  margin: 2em auto 1em; }
+  #slack form > * {
+    display: table-cell; }
+  #slack form label {
+    width: 2.5em;
+    background: #fff url("../slack.png") center center no-repeat;
+    background-size: 1.5em;
+    vertical-align: middle;
+    border-radius: .2em 0 0 .2em; }
+  #slack form input {
+    width: 100%;
+    height: 2.5em;
+    border: 0; }
+  #slack form a {
+    width: 4em;
+    color: #fff;
+    background-color: #e16;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 0 .2em .2em 0;
+    -webkit-transition: background-color 400ms;
+    transition: background-color 400ms; }
+    #slack form a:hover {
+      background-color: #f14185; }
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 3em;
-    line-height: 6em; } }
+    line-height: 6em; }
+  #slack form {
+    font-size: 1em; } }
