--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,9 @@
 @import "lib/normalize";
 
-$color-light: #fff;
-$color-dark:  #333;
-$color-key:   #ff9;
+$color-light:  #fff;
+$color-dark:   #333;
+$color-key:    #ff9;
+$color-button: #e16;
 
 body {
   background-color: $color-dark;
@@ -48,9 +49,57 @@ section {
   }
 }
 
+#slack {
+  form {
+    display: table;
+    font-size: 1.5em;
+    color: #333;
+    height: 2.5em;
+    width: 100%;
+    max-width: 20em;
+    margin: 2em auto 1em;
+
+    > * {
+      display: table-cell;
+    }
+
+    label {
+      width: 2.5em;
+      background: $color-light url('../slack.png') center center no-repeat;
+      background-size: 1.5em;
+      vertical-align: middle;
+      border-radius: .2em 0 0 .2em;
+    }
+
+    input {
+      width: 100%;
+      height: 2.5em;
+      border: 0;
+    }
+
+    a {
+      width: 4em;
+      color: $color-light;
+      background-color: $color-button;
+      text-decoration: none;
+      text-align: center;
+      vertical-align: middle;
+      border-radius: 0 .2em .2em 0;
+      transition: background-color 400ms;
+
+      &:hover {
+        background-color: lighten($color-button, 10%);
+      }
+    }
+  }
+}
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 3em;
     line-height: 6em;
+  }
+  #slack form {
+    font-size: 1em;
   }
 }
