--- a/public/index.css
+++ b/public/index.css
@@ -215,7 +215,7 @@ section {
     font-family: 'Montserrat', sans-serif;
     color: #ff9; }
 
-#slack form {
+#slack_form form {
   display: table;
   font-size: 1.5em;
   color: #333;
@@ -223,42 +223,62 @@ section {
   width: 100%;
   max-width: 20em;
   margin: 1em auto; }
-  #slack form > * {
+  #slack_form form > * {
     display: table-cell; }
-  #slack form label {
+  #slack_form form label {
     width: 2.5em;
     background: #fff url("../slack.png") center center no-repeat;
     background-size: 1.5em;
     vertical-align: middle;
     border-radius: .2em 0 0 .2em; }
-  #slack form input {
+  #slack_form form input {
     width: 100%;
     height: 2.5em;
     border: 0; }
-  #slack form a {
+  #slack_form form .submit {
     width: 4em;
     color: #fff;
-    background-color: #e05;
     text-decoration: none;
     text-align: center;
     vertical-align: middle;
     border-radius: 0 .2em .2em 0; }
-    #slack form a:hover {
-      background-color: #ff2271; }
-    #slack form a::before {
-      content: 'JOIN'; }
-  #slack form.disable label, #slack form.disable input {
+  #slack_form form label, #slack_form form input {
     background-color: #ccc; }
-  #slack form.wait a {
-    background: #ff2271 url("../loading.gif") center center no-repeat; }
-    #slack form.wait a::before {
-      content: ''; }
-  #slack form.ok a {
-    background-color: #0b9; }
-    #slack form.ok a::before {
-      content: '✓'; }
-  #slack form.ng a::before {
-    content: 'NG...'; }
+
+#slack_form .success {
+  color: #0b9; }
+
+#slack_form .error {
+  color: #ff9; }
+
+#slack_form .invitation_unsent .submit {
+  background-color: #e05; }
+  #slack_form .invitation_unsent .submit::before {
+    content: "JOIN"; }
+
+#slack_form .invitation_unsent label, #slack_form .invitation_unsent input {
+  background-color: #fff; }
+
+#slack_form .invitation_unsent .submit:hover {
+  background-color: #ff2271; }
+
+#slack_form .invitation_sending .submit {
+  background-color: #e05; }
+  #slack_form .invitation_sending .submit::before {
+    content: ""; }
+
+#slack_form .invitation_sending .submit {
+  background: #ff2271 url("../loading.gif") center center no-repeat; }
+
+#slack_form .invitation_success .submit {
+  background-color: #0b9; }
+  #slack_form .invitation_success .submit::before {
+    content: "✓"; }
+
+#slack_form .invitation_error .submit {
+  background-color: #e05; }
+  #slack_form .invitation_error .submit::before {
+    content: "NG..."; }
 
 @media (max-width: 768px) {
   header h1 {
