--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,6 +75,8 @@ section {
       width: 100%;
       height: 2.5em;
       border: 0;
+      border-radius: 0;
+      padding: 0;
     }
 
     .submit {
