--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,135 +1,4 @@
 @import "lib/normalize";
-
-$color-light:  #fff;
-$color-dark:   #333;
-$color-key:    #ff9;
-$color-button: #e05;
-
-body {
-  background-color: $color-dark;
-  color: $color-light;
-  text-align: center;
-}
-
-a {
-  &:link, &:visited { color: darken($color-light, 20%); }
-  &:hover, &:active { color: $color-light; }
-}
-
-header {
-  position: relative;
-  background-color: $color-key;
-  color: $color-dark;
-
-  h1 {
-    position: relative;
-    z-index: 2;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    line-height: 4em;
-    font-size: 6em;
-  }
-
-  canvas#voronoi {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-  }
-}
-
-section {
-  margin: 4em auto;
-  padding: 0 1em;
-  max-width: 768px;
-
-  h2 {
-    font-family: 'Montserrat', sans-serif;
-    color: $color-key;
-  }
-}
-
-#slack_form {
-  form {
-    display: table;
-    font-size: 1.5em;
-    color: #333;
-    height: 2.5em;
-    width: 100%;
-    max-width: 20em;
-    margin: 1em auto;
-
-    > * {
-      display: table-cell;
-    }
-
-    label {
-      width: 2.5em;
-      background: $color-light url('../slack.png') center center no-repeat;
-      background-size: 1.5em;
-      vertical-align: middle;
-      border-radius: .2em 0 0 .2em;
-    }
-
-    input {
-      width: 100%;
-      height: 2.5em;
-      border: 0;
-      border-radius: 0;
-      padding: 0;
-    }
-
-    .submit {
-      width: 4em;
-      color: $color-light;
-      text-decoration: none;
-      text-align: center;
-      vertical-align: middle;
-      border-radius: 0 .2em .2em 0;
-    }
-
-    label, input {
-      background-color: #ccc;
-    }
-  }
-
-  .success { color: #0b9; }
-  .error { color: $color-key; }
-
-  @mixin invitation_button($name, $background-color, $label) {
-    .invitation_#{$name} {
-      .submit {
-        background-color: $background-color;
-        &::before { content: $label; }
-      }
-      @content;
-    }
-  }
-
-  @include invitation_button('unsent',  $color-button, 'JOIN') {
-    label, input {
-      background-color: #fff;
-    }
-    .submit:hover {
-      background-color: lighten($color-button, 10%);
-    }
-  }
-  @include invitation_button('sending', $color-button, '') {
-    .submit {
-      background: lighten($color-button, 10%) url('../loading.gif') center center no-repeat;
-    }
-  }
-  @include invitation_button('success', #0b9, '✓');
-  @include invitation_button('error',   $color-button, 'NG...');
-}
-
-@media (max-width: 768px) {
-  header h1 {
-    font-size: 3em;
-    line-height: 6em;
-  }
-
-  #slack form {
-    font-size: 1em;
-  }
-}
+@import "variables";
+@import "general";
+@import "slack";
