--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #333;
   color: #fff;
   text-align: center;
+  line-height: 1.5em;
 }
 
 a:link, a:visited { color: #ccc; }
